{
    "name": "Input_HPG1",
    "maps": [
        {
            "name": "VR",
            "id": "b29ca3e1-459f-459a-b940-733378322ee7",
            "actions": [
                {
                    "name": "LeftTrigger",
                    "type": "Value",
                    "id": "d76dcf74-f80d-4bcc-9a59-04397dc9cc71",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightTrigger",
                    "type": "Value",
                    "id": "8bbe11ad-cb97-43f8-ac51-d7848c0073bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftGrip",
                    "type": "Value",
                    "id": "7e1b2941-a05e-4981-8799-2db830ad8ed2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightGrip",
                    "type": "Value",
                    "id": "161dd7bf-9144-4a1b-a796-9a93beb9d73d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftRocker",
                    "type": "Value",
                    "id": "aa3f132b-2d5c-46b1-8c02-eaff7979c96e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftRockerAxis",
                    "type": "Value",
                    "id": "f3cf3e8c-5efb-482c-93bc-e502e454a5f3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightRocker",
                    "type": "Value",
                    "id": "2d60e7ea-5e6c-4592-8761-d2d9f24ee6c8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightRockerAxis",
                    "type": "Value",
                    "id": "ad21729b-234a-4f8a-9a09-e874cff3c295",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "70c40293-4814-4fad-8b8d-c24bf369b541",
                    "path": "<WMRSpatialController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af4ef095-2e51-4786-986f-b2bebe1ee7b3",
                    "path": "<WMRSpatialController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6643ce6c-7607-44c7-ae32-71c39074460f",
                    "path": "<WMRSpatialController>{LeftHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ff0023a-453b-4f82-b80b-e2071b8ef4d9",
                    "path": "<WMRSpatialController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12711090-3dae-4546-94f7-19c7fa183eb9",
                    "path": "<XRController>{LeftHand}/secondary2DAxisClick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRocker",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bcc3adb3-946a-474e-9b57-d29e598aa573",
                    "path": "<XRController>{RightHand}/secondary2DAxisClick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightRocker",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f395bbd-94dc-4d09-99b0-f61bc63784c4",
                    "path": "<XRController>{LeftHand}/secondary2DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRockerAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "625abf06-d008-423e-a7a4-35b83691d222",
                    "path": "<XRController>{RightHand}/secondary2DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightRockerAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}